implemnt edit and clear all

--- a/index.html
+++ b/index.html
@@ -26,15 +26,7 @@
       <section class="main">
         <input id="check-all" class="check-all" type="checkbox" />
         <label class="hidden" id="label-check-all">Mark all as complete</label>
-        <ul class="todo-list">
-          <!-- <li>
-            <div class="view">
-              <input class="check" type="checkbox" />
-              <label>hello</label>
-            </div>
-            <button class="remove" id="remove"></button>
-          </li> -->
-        </ul>
+        <ul class="todo-list"></ul>
       </section>
 
       <div class="footer-section hidden" id="footer">
