convert javascript to typescript

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
       </ul>
     </section>
     <footer class="footer">
-      <span class="count"><strong>0</strong> items left</span>
+      <span id="count" class="count"><strong>0</strong> items left</span>
       <ul class="filters">
         <li class="mr-3">
           <a class="selected filtro " onclick="findAll()">All</a>
