--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,6 @@
       <p>Part of <a href="#">ToDoMVC</a></p>
     </footer>
 
-    <script src="index.js"></script>
+    <script src="../dist/index.js"></script>
   </body>
 </html>
