--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,6 @@
         class="new-todo"
         placeholder="What need to be done?"
         id="input"
-        onkeypress="addItem(event)"
       />
 
       <section class="main">
@@ -59,6 +58,6 @@
       <p>Part of <a href="#">ToDoMVC</a></p>
     </footer>
 
-    <script src="../dist/index.js"></script>
+    <script type="module" src="../dist/index.js"></script>
   </body>
 </html>
